--- a/programs/swap/Cargo.toml
+++ b/programs/swap/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "orderbook"
+name = "swap"
 version = "0.1.0"
 description = "Created with Anchor"
 edition = "2021"
 
 [lib]
 crate-type = ["cdylib", "lib"]
-name = "orderbook"
+name = "swap"
 
 [features]
 default = []
